cmake_minimum_required(VERSION 3.18)

project(MESA Fortran C CUDA)

set(CMAKE_Fortran_COMPILER /usr/bin/gfortran)
set(CMAKE_Fortran_PREPROCESS ON)
set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -ffree-line-length-512")

add_subdirectory(const)
add_subdirectory(utils)
add_subdirectory(math)
add_subdirectory(mtx)
add_subdirectory(auto_diff)
add_subdirectory(forum)
add_subdirectory(num)
# add_subdirectory(interp_1d)
# add_subdirectory(interp_2d)
# add_subdirectory(chem)
# add_subdirectory(colors)
# add_subdirectory(eos)
# add_subdirectory(kap)
# add_subdirectory(rates)
# add_subdirectory(neu)
# add_subdirectory(net)
# add_subdirectory(star_data)
# add_subdirectory(turb)
# add_subdirectory(ionization)
# add_subdirectory(atm)
# add_subdirectory(sample)
# add_subdirectory(gyre)
# add_subdirectory(adipls)
# add_subdirectory(star)
# add_subdirectory(binary)
# add_subdirectory(astero)