add_library(mesablas SHARED
    dgemm.f
    dtrsm.f
    xerbla.f
    lsame.f
    dger.f
    dcopy.f
    dgemv.f
    dtbsv.f
    daxpy.f
    ddot.f
    dgbmv.f
    dasum.f
    dtrsv.f
    dscal.f
    dswap.f
    idamax.f
    strsm.f
    sgemm.f
    slamch.f
    isamax.f
    sswap.f
    sscal.f
    sger.f
    zaxpy.f
    zdotc.f
    zgerc.f
    zhemv.f
    zher2.f
    ztrsv.f
)