add_library(mesalapack SHARED
      dgbcon.f
      dgbequ.f
      dgbrfs.f
      dgbsv.f
      dgbsvx.f
      dgbtf2.f
      dgbtrf.f
      dgbtrs.f
      dgecon.f
      dgeequ.f
      dgerfs.f
      dgesv.f
      dgesvx.f
      dgetf2.f
      dgetrf.f
      dgetrs.f
      dgtcon.f
      dgtrfs.f
      dgtsv.f
      dgtsvx.f
      dgttrf.f
      dgttrs.f
      dgtts2.f
      disnan.f
      dlacn2.f
      dlabad.f
      dlacpy.f
      dlagtm.f
      dlangb.f
      dlange.f
      dlangt.f
      dlantb.f
      dlantr.f
      dlaqgb.f
      dlaqge.f
      dlassq.f
      dlaswp.f
      dlatbs.f
      dlatrs.f
      drscl.f
      dgetri.f
      dgesvd.f
      dnrm2.f
      dlasq3.f
      dlasq4.f
      dbdsqr.f
      dgelqf.f
      dlascl.f
      dorgbr.f
      dorgqr.f
      dtrtri.f
      dgebrd.f
      dgeqrf.f
      dlaset.f
      dorglq.f
      dormbr.f
      dgebd2.f
      dgeqr2.f
      dlarfb.f
      dlartg.f
      dlasq1.f
      dlasv2.f
      dorgl2.f
      dormqr.f
      dtrmm.f
      dgelq2.f
      dlabrd.f
      dlarft.f
      dlas2.f
      dlasr.f
      dorg2r.f
      dormlq.f
      drot.f
      dtrti2.f
      dtrtrs.f
      dlarf.f
      dlarfg.f
      dlasrt.f
      dorm2r.f
      dorml2.f
      dlapy2.f
      dlasq2.f
      dtrmv.f
      dlasq5.f
      dlasq6.f
      dlazq4.f
      dcabs1.f
      ../blas_src/dlamch.f
      dlaisnan.f
      icmax1.f
      ilaclr.f
      iladlr.f
      ilaslc.f
      ilauplo.f
      ilazlr.f
      izmax1.f
      ieeeck.f
      iladiag.f
      ilaenv.f
      ilaslr.f
      ilaver.f
      iparmq.f
      ilaclc.f
      iladlc.f
      ilaprec.f
      ilatrans.f
      ilazlc.f
      izamax.f
      sgesv.f
      sgetf2.f
      sgetrf.f
      sgetrs.f
      slaswp.f
      zgbtrf.f
      zgbtrs.f
      zgetrf.f
      zgetrs.f
      zgetf2.f
      zlaswp.f
      zlacgv.f
      zswap.f
      zgeru.f
      ztbsv.f
      zgemv.f
      ztrsm.f
      zgbtf2.f
      zgttrf.f
      zgttrs.f
      zgtts2.f
      zscal.f
      zcopy.f
      zgemm.f
      dgeev.f
      dgebal.f
      dgehrd.f
      dorghr.f
      dhseqr.f
      dtrevc.f
      dgebak.f
      dlahr2.f
      dgehd2.f
      dlaqr0.f
      dlahqr.f
      dlaln2.f
      dlaqr3.f
      dlanv2.f
      dladiv.f
      dlaqr4.f
      dlaqr5.f
      dlaqr1.f
      dlaqr2.f
      dormhr.f
      dtrexc.f
      dlaexc.f
      dlasy2.f
      dlarfx.f
)